# certaik-api

./: .dockerignore  .env.example  .flake8  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: cache.py  jobs.py  main.py  queues.py  websocket.py
app/ai/: routes.py
app/ai/markdown/: gas.py  security.py
app/ai/prompts/: gas.py  security.py
app/ai/services/: eval.py
app/api/: dependencies.py  urls.py
app/api/admin/: router.py
app/api/ai/: agent_sec.py  eval.py
app/api/app/: router.py
app/api/audit/: router.py
app/api/auth/: router.py
app/api/base/: router.py
app/api/blockchain/: router.py  service.py
app/api/contract/: router.py  service.py
app/api/platform/: router.py
app/api/routers/: ai.py
app/api/user/: router.py
app/api/websocket/: router.py
app/blockchain/: routes.py
app/blockchain/services/: gas.py  scan.py
app/cronjobs/: testnet.py  twitter.py
app/db/: models.py
app/db/models/: abstract.py  terminal.py
app/lib/gas/v1/markdown/: __init__.py
app/lib/security/v1/markdown/: __init__.py
app/pydantic/: request.py
app/status/: routes.py
app/status/services/: worker.py
app/utils/: enums.py  mappers.py  types.py
app/utils/schema/: request.py
app/web3/: provider.py
